--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,56 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
-
+    >
+    <View
+        android:id="@+id/view_1"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="#000000"
+        />
+    <View
+        android:id="@+id/view_2"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="#FF0033"
+        android:layout_below="@+id/view_1"
+        />
     <LinearLayout
         android:id="@+id/ll_1"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:orientation="vertical"
-        android:background="#000000"
-        android:padding="20dp"
-        android:layout_marginBottom="20dp">
-
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_below="@+id/view_2"
+        android:background="#0066FF"
+        android:orientation="horizontal"
+        android:padding="15dp">
         <View
-            android:layout_width="match_parent"
+            android:layout_width="100dp"
             android:layout_height="match_parent"
             android:background="#FF0033"/>
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:orientation="horizontal"
-        android:background="#0066FF"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:gravity="center">
-        <View
-            android:layout_width="0dp"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#000000"
-            android:layout_weight="1"
-            />
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="#ff0033"
-            android:layout_weight="1"
-            />
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="#55aa99"
-            android:layout_weight="1"
-            />
+            android:padding="15dp">
+            <View
+                android:id="@+id/view_3"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:background="#FF9900"/>
+            <View
+                android:id="@+id/view_4"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:background="#FF9900"
+                android:layout_toRightOf="@id/view_3"
+                android:layout_marginLeft="20dp"/>
+
+        </RelativeLayout>
 
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
